-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.1, 5.4.1, 5.5.0
-
None
JPEG descriptions loose UTF characters. In qtbase/src/gui/image/jpeghandler.cpp set_text in the last for loop it may better be
QByteArray comment = it.key().toUtf8();
comment += it.value().toUtf8();
instead of
QByteArray comment = it.key().toLatin1();
comment += it.value().toLatin1();
For Gerrit Dashboard: QTBUG-44709 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
222817,3 | QImage/Jpeg: decode/encode comment attributes as utf-8 | dev | qt/qtbase | Status: MERGED | +2 | 0 |